# label-printer-app

./: PRODUCTION_GUIDE.md  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/components/: Autoupdater.vue  FileUpload.vue  FormInput.vue  FormMultiLabelSelect.vue  FormSelect.vue  FormTextarea.vue  Logo.vue  Modal.vue  PrintedStickers.vue  PrinterConfig.vue  Toaster.vue
app/composables/: useToast.ts
app/layouts/: default.vue
app/pages/: __!index.vue  index.vue  index.vue.backup  new_index.vue
app/pages/v1/: index.vue
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
