[package]
name = "nuxtor"
version = "1.1.1"
description = "Barix Label Printer App"
authors = [ "Joao Batista" ]
license = "MIT"
repository = "https://github.com/jotapebatista/label-printer-app"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.0.3"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-store = "2.2.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sys-info = "0.9"

[dependencies.tauri]
version = "2.1.1"
features = [ "tray-icon" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]
